Increment build numbers from Scheme | Edit Scheme... | Build | Post Action... script Versionining must be set to Apple Generic to allow avgtool bump to work Still cannot get $MARKETING_VERSION to increment with this method? XCode failure...

--- a/TMDB Search.xcodeproj/xcshareddata/xcschemes/TMDB Search.xcscheme
+++ b/TMDB Search.xcodeproj/xcshareddata/xcschemes/TMDB Search.xcscheme
@@ -6,6 +6,24 @@
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES"
       buildArchitectures = "Automatic">
+      <PostActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "cd &quot;${PROJECT_DIR}&quot;&#10;&#10;# Only increment build number for Debug builds&#10;if [ &quot;${CONFIGURATION}&quot; = &quot;Debug&quot; ]; then&#10;    agvtool bump&#10;fi&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "3C2A229D2E42017500ADB004"
+                     BuildableName = "TMDB Search.app"
+                     BlueprintName = "TMDB Search"
+                     ReferencedContainer = "container:TMDB Search.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PostActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
